@011&trunk fix various layout issues
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10910 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -278,19 +278,10 @@ background-color: #eed;
 }
 
 /* why use this shit anyway?! */
-.mainRegular > .boxBody, .tournamentInvite {
-	overflow:inherit !important;
+.mainRegular > .boxBody {
+	overflow: visible !important;
 }
-.tournamentInvite::after {
-	content: ".";
-	display: block;
-	clear: both;
-	visibility: hidden;
-	height: 0;
-}
-.findSimilarPlayers {
-	width: 106% !important;
-}
+
 .sectorShirt
 {
 	background: url() no-repeat;
